--- a/frontapp/static/css/basic.css
+++ b/frontapp/static/css/basic.css
@@ -637,7 +637,7 @@ h1, h2, h3, h4, h5, h6 {font-weight: inherit; font-size: inherit;}
 /* 스와이퍼 */
 
 /* 기본 */
-.swiper {
+/* .swiper {
     width: 100%;
     height: 100%;
 }
@@ -645,7 +645,6 @@ h1, h2, h3, h4, h5, h6 {font-weight: inherit; font-size: inherit;}
     text-align: center;
     font-size: 18px;
     background: #fff;
-    /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -664,10 +663,10 @@ h1, h2, h3, h4, h5, h6 {font-weight: inherit; font-size: inherit;}
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
 /* 페이지네이션 */
-.swiper-pagination {
+/* .swiper-pagination {
     bottom: 40px !important;
     z-index: 2 !important;
 }
@@ -680,10 +679,10 @@ h1, h2, h3, h4, h5, h6 {font-weight: inherit; font-size: inherit;}
 }
 .swiper-pagination .swiper-pagination-bullet-active {
     opacity: 0.5 !important;
-}
+} */
 
 /* 이전, 다음 버튼 */
-.swiper-button-prev,
+/* .swiper-button-prev,
 .swiper-button-next {
     transform: translateY(-50%) !important;
     width: 30px !important;
@@ -715,7 +714,7 @@ h1, h2, h3, h4, h5, h6 {font-weight: inherit; font-size: inherit;}
 }
 .swiper-button-next::before {
     background: url(../img/) no-repeat center center/cover;
-}
+} */
 
 /* ------------------------------------------------------------------------------- */
 
