--- a/frontapp/static/css/public.css
+++ b/frontapp/static/css/public.css
@@ -61,6 +61,7 @@ input:disabled,
 select:disabled,
 textarea:disabled {
     background: #eee !important;
+    color: #999 !important;
 }
 
 .top-btn-box {
